# Cuber

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.bat  build.sh  build.zig  build.zig.zon  rdoc.cap  test.copy  testing.copy  voxels.old
assets/: raytrace.comp
cgpu/: Cargo.toml
cgpu/src/: allocator.rs  brickmap.rs  bricks.rs  buddy.rs  camera.rs  compute.wgsl  dense.rs  freelist.rs  lib.rs  managed.rs  materials.rs  mesh.rs  sdf.rs  shader.wgsl  state.rs  tex_shader.wgsl  texture.rs  voxels.wgsl
cgpu/src/shaders/: sdf.wgsl
client/: Cargo.toml
client/src/: diagnostics.rs  egui_integration.rs  input.rs  lib.rs  main.rs  render.rs  ui.rs
client/src/shaders/: present.wgsl  raytrace.wgsl
cubed/: cubed.factor
cubed/demo/: demo.factor
cuber/: brickmap.zig  camera.zig  cuber.factor  cuber.zig  fastnoise.zig  materials.zig  palettes.zig  render.zig  shaders.zig  storage.zig  test.zig  textures.zig  utils.zig  world.zig  worldgen.zig
cuber/shaders/: shader.comp  shader.frag  shader.vert
cvk/: Cargo.toml
cvk/src/: adapter.rs  buffer.rs  command.rs  descriptor.rs  device.rs  egui.rs  freelist.rs  image.rs  instance.rs  lib.rs  main.rs  pipeline.rs  queues.rs  semaphore.rs  surface.rs  swapchain.rs  texture.rs  utils.rs
dependencies/: README.md
game/: Cargo.toml
game/src/: brick.rs  brickmap_edit.rs  camera.rs  dense.rs  input.rs  lib.rs  material.rs  octree.rs  palette.rs  raytrace.rs  sdf.rs  worldgen.rs
glfw/: glfw.factor
glutils/: buffers.zig  glutils.zig  shaders.zig  textures.zig
glyphers/: Cargo.toml
glyphers/src/: lib.rs
glyphers_ffi/: Cargo.toml
glyphers_ffi/src/: lib.rs
libs/: gl.zig
libs/FastNoiseLite/: FastNoiseLite.c
liverking/: Cargo.toml  README.md
liverking/src/: hunt.rs  juice.rs  lib.rs  liver.rs  raid.rs
math/: math.zig
nett/: build.zig  resource.zig  type.zig  type_map.zig  utils.zig
old/cgpu_old/src/: bricks.rs  compute_present.wgsl  freelist.rs  lib.rs  materials.rs  sdf.rs  sdf.wgsl  state.rs  tex_shader.wgsl
old/cuber/: cuber.factor
old/glfw/: glfw.factor
old/sdfui/ctx/: ctx.factor
old/sdfui/shaders/: shaders.factor
pressa/: pressa.factor
pressa/constants/: constants.factor
pressa/glfw/: glfw.factor
samples/glfw/: glfw.factor
samples/glyphers_test/: Cargo.toml
samples/glyphers_test/src/: main.rs
samples/ioprogrambug/: ioprogrambug.factor
samples/sdfui/: basic.zig
samples/various/: packed3d.zig
sdfui/: Cargo.toml  README.md  build.zig  build.zig.zon  sdfui.factor  sdfui.zig  tests.zig
sdfui/cache/: cache.factor
sdfui/demo/: demo.factor
sdfui/examples/: basic.zig
sdfui/fonts/: fonts.factor
sdfui/glue/: glue.factor
sdfui/shaders/: shader.comp  shader.frag  shader.vert  shaders.factor
sdfui/src/: fearless.rs  funny_vec.rs  instructions.rs  lib.rs  platform.rs  salloc.rs  sdf.rs  sdf_old.txt  sdfui.zig  utils.rs
sdfui/utils/: utils.factor
sdfui_old/: sdfui.factor
sdfui_old/demo/: demo.factor
