[workspace]
resolver = "2"
members = [ 
    "cvk", 
    "game",
    "client",
    "liverking", 
    "cgpu",
]

default-run = "client"

[workspace.dependencies]
game = { version = "0.1", path = "game" }
cvk = { version = "0.1", path = "cvk" }
cgpu = { version = "0.1", path = "cgpu" }

winit = { version = "0.30.5" }
nalgebra = { version = "0.33.2", features = ["convert-bytemuck"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
parking_lot = { version = "0.12.3" }
rayon = { version = "1.10.0" }
log = { version = "0.4.22" }
anyhow = { version = "1.0" }
rand = { version = "0.8.5" }
egui = { version = "0.30.0" }
