[package]
name = "cgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
game = { version = "0.1", path = "../game" }

wgpu = "23.0.0"
log = "0.4.22"
winit = "0.30.5" 
raw-window-handle = "0.4.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
nalgebra = { version = "0.33.2", features = ["convert-bytemuck"] }
parking_lot = "0.12.3"
