[package]
name = "client"
version = "0.1.0"
edition = "2021"

default-run = "client"

[dependencies]
game = { version = "0.1", path = "../game" }
cgpu = { version = "0.1", path = "../cgpu" }
nalgebra = { workspace = true }
wgpu = "23.0.0"
# cvk = { version = "0.1", path = "../cvk" }
winit = { workspace = true }
pollster = "0.4.0"
log = { workspace = true }
env_logger = "0.11.5"
parking_lot = { workspace = true }

egui = { git = "https://github.com/emilk/egui", branch="master" }
egui-wgpu = { git = "https://github.com/emilk/egui", branch="master", features = ["winit"] }
egui-winit = { git = "https://github.com/emilk/egui", branch="master" }
