[package]
name = "client"
version = "0.1.0"
edition = "2021"

default-run = "client"

[dependencies]
game = { workspace = true }
cgpu = { workspace = true }

winit = { workspace = true }
nalgebra = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
log = { workspace = true }

env_logger = { version = "0.11.5" }

