[package]
name = "cvk"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = [ "debug", "loaded", "std" ] }
ash-window = "0.13.0"
vk-mem = "0.4.0"
naga = { version = "23.1.0", features = [ "wgsl-in", "spv-out"] }
winit = { workspace = true }
nalgebra = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
egui = "0.30.0"
egui-winit = "0.30.0"

[target.'cfg(not(test))'.dependencies]
env_logger = "0.11.5"
game = { path = "../game", version = "*" }
rand = { workspace = true }
