[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

fastnoise-lite = "1.1.1"
