[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
nalgebra = { version = "0.33.2", features = [ "convert-bytemuck" ] }
winit = "0.30.5"
rand = "0.8.5"
bytemuck = { version = "1.20.0", features = ["derive"] }
fastnoise-lite = "1.1.1"
rayon = "1.10.0"
parking_lot = "0.12.3"
