[package]
name = "sdfui"
version = "0.1.2"
edition = "2021"
authors = [ "Sebastian Strobl" ]
description = "UI library based on Signed Distance Fields"
license = "Apache-2.0"
repository = "https://github.com/TriedAngle/Cuber"
keywords = ["sdf", "ui", "gui", "animation"]
categories = ["gui", "animation"]

[dependencies]
rayon = "1.7.0"

[dev-dependencies]
image = "0.24.6"